# learning-Open-GL

./: CMakeLists.txt  go.sh
src/: CMakeLists.txt  chapter7.cpp  exercise2_5.8.cpp  glad.c
src/chapter 6/: chapter_6.cpp  exercise2_6.8.cpp  exercise3_6.8.cpp
src/chapter1_to_5/: chapter_1_to_5.cpp  exercise1_5.8.cpp  exercise3_5.8.cpp
src/include/: shader.hpp
src/include/glad/: glad.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
